--- a/styles/components/_utils.scss
+++ b/styles/components/_utils.scss
@@ -2,14 +2,17 @@
 @import "../defaults/breakpoints";
 
 @mixin image-large-round(){
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
     padding: 10px;
     
     img{
+        height: 350px;
         width: 350px;
-        border-radius: 100%;
+        object-fit: cover;
+        border-radius: 10%;
+        border: 3px solid $primary-color; 
 
         @media screen and (max-width: $large) {
             max-width: 400px;
