--- a/styles/defaults/_colors.scss
+++ b/styles/defaults/_colors.scss
@@ -1,4 +1,7 @@
-$primary-color:rgb(25, 43, 5);
-$nav-botton-color: rgb(246, 248, 249);
-$primary-background:rgb(252, 253, 251);
-$nav-color:  rgb(244, 250, 244);
+$primary-color:rgb(34, 85, 23);
+$nav-button-color: rgb(255, 255, 255);
+$primary-background:rgb(240, 253, 240);
+$secondary-background: rgb(220, 243, 220);
+$accent-color: rgb(144, 238, 144);
+$text-color: rgb(51, 51, 51);
+$nav-color:  rgb(230, 245, 230);
