--- a/styles/pages/about.scss
+++ b/styles/pages/about.scss
@@ -1,14 +1,17 @@
 @import "../../index";
 @import "../defaults/colors";
 @import "../defaults/breakpoints";
- 
+
 main {
     flex-wrap: wrap;
    
-   .box {
-        
+    .box {
         display: flex;
         flex-direction: column;
+        background-color: $primary-background;
+        padding: 20px;
+        border-radius: 10px;
+        animation: fadeIn 1s ease-in-out;
 
         .heading {
             display: flex;
@@ -16,7 +19,15 @@ main {
             padding: 30px 0px 20px 0px;
             text-align: center;
             margin: 0;
-            
+            font-family: 'Arial', sans-serif;
+            font-size: 2.5em;
+            color: $primary-color;
+            animation: slideInDown 1s ease-in-out;
+
+            &:hover {
+                animation: pulse 1s infinite;
+                cursor: pointer;
+            }
         }
 
         .about {
@@ -24,58 +35,169 @@ main {
             justify-content: space-around;
             text-align: left;
             padding: 50px;
+            background-color: $nav-color;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            animation: fadeIn 1.5s ease-in-out;
 
             @media screen and (max-width: $large) {
                 flex-direction: column;
                 align-items: center;
                 text-align: center;
-                padding: 0px 30px 80px 30px;
+                padding: 20px;
             }
-            // Text Component: Article with Header
+
             article {
                 max-width: 800px;
                 text-align: justify;
                 padding: 0px 40px 0px 0px;
+                font-family: 'Georgia', serif;
+                color: $text-color;
 
                 @media screen and (max-width: $large) {
-                    flex-direction: column;
-                    align-items: center;
-                    text-align: justify;
-                    text-align-last: center;
                     padding: 0px;
+                    text-align-last: center;
+                }
 
-                    h2 {
+                h2 {
+                    font-size: 2em;
+                    color: $primary-color;
+                    animation: slideInLeft 1s ease-in-out;
+                    
+                    @media screen and (max-width: $large) {
                         text-align: center;
                     }
                 }
+
+                p {
+                    line-height: 1.6;
+                    animation: fadeInUp 1s ease-in-out;
+                }
             }
 
-            aside{
-                img{
+            aside {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 20px;
+                animation: fadeInRight 1s ease-in-out;
+                
+                img {
                     max-width: 400px;
                     width: 90vw;
-                    border: 5px solid $nav-botton-color;
-                    border-radius: 50px;
+                    border: 4px solid $primary-color;
+                    border-radius: 10px;
                     overflow: hidden;
+                    transition: transform 0.3s;
+                    animation: zoomIn 1s ease-in-out;
+
+                    @media screen and (max-width: $large) {
+                        width: 100%;
+                    }
+
+                    &:hover {
+                        transform: scale(1.05);
+                        cursor: pointer;
+                    }
                 }
-                // Graphical Component: Side Image Grid
+
                 .image-grid-4 {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 20px;
 
                     max-width: 400px;
                     width: 90vw;
-        
-                    img{
-                        border: 5px solid $nav-botton-color;
-                        border-radius: 50px;
+
+                    @media screen and (max-width: $large) {
+                        width: 100%;
+                    }
+
+                    img {
+                        border: 4px solid $primary-color;
+                        border-radius: 10px;
                         overflow: hidden;
+                        max-width: 100%;
+                        transition: transform 0.3s;
+
+                        &:hover {
+                            transform: scale(1.05);
+                        }
                     }
                 }
-        
+
                 .image-grid-row {
                     display: flex;
+                    gap: 20px;
                 }
             }
         }
-    }      
-    
+    }
+
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
+
+    @keyframes slideInDown {
+        from {
+            transform: translateY(-100%);
+        }
+        to {
+            transform: translateY(0);
+        }
+    }
+
+    @keyframes slideInLeft {
+        from {
+            transform: translateX(-100%);
+        }
+        to {
+            transform: translateX(0);
+        }
+    }
+
+    @keyframes fadeInUp {
+        from {
+            transform: translateY(20px);
+            opacity: 0;
+        }
+        to {
+            transform: translateY(0);
+            opacity: 1;
+        }
+    }
+
+    @keyframes fadeInRight {
+        from {
+            transform: translateX(100%);
+        }
+        to {
+            transform: translateX(0);
+        }
+    }
+
+    @keyframes zoomIn {
+        from {
+            transform: scale(0.9);
+            opacity: 0;
+        }
+        to {
+            transform: scale(1);
+            opacity: 1;
+        }
+    }
+
+    @keyframes pulse {
+        0%, 100% {
+            transform: scale(1);
+        }
+        50% {
+            transform: scale(1.05);
+        }
+    }
 }
