--- a/styles/pages/blog.css
+++ b/styles/pages/blog.css
@@ -1,39 +1,54 @@
 .header-root {
-  color: rgb(246, 248, 249);
-  background: rgb(25, 43, 5);
+  color: rgb(255, 255, 255);
+  background: rgb(34, 85, 23);
   display: flex;
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
   height: 80px;
-  padding: 0px 20px 0px 20px;
+  padding: 0px 20px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  top: 0;
+  z-index: 1000;
 }
 .header-root .profile-message {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .header-root .profile-message img {
-  border: 2px solid white;
+  border: 2px solid rgb(255, 255, 255);
   border-radius: 100%;
   height: 50px;
   width: 50px;
+  transition: transform 0.3s, border 0.3s, box-shadow 0.3s;
 }
 .header-root .profile-message img:hover {
-  transform: scale(1.2);
-  border: 2px solid pink;
+  transform: scale(1.1);
+  border: 2px solid rgb(144, 238, 144);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
 .header-root .profile-message label {
   padding-left: 20px;
   display: flex;
   align-items: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
 }
 .header-root nav .nav-button {
   all: unset;
-  padding: 20px 20px 20px 20px;
+  padding: 16px 24px 16px 24px;
+  margin: -4.5px;
+  font-size: 1.1rem;
+  color: rgb(255, 255, 255);
+  transition: color 0.3s, border-bottom 0.3s;
+  border-bottom: 2px solid transparent;
 }
 .header-root nav .nav-button:hover {
-  color: pink;
+  color: rgb(144, 238, 144);
+  border-bottom: 2px solid rgb(144, 238, 144);
   cursor: pointer;
 }
 .header-root nav .nav-icon {
@@ -44,33 +59,50 @@
     display: block;
     margin: 0px 10px 0px 0px;
     font-size: 40px;
-    color: rgb(246, 248, 249);
+    color: rgb(255, 255, 255);
   }
   .header-root nav .nav-icon:hover {
     cursor: pointer;
-    color: pink;
+    color: rgb(144, 238, 144);
   }
   .header-root nav .nav-buttons-root {
-    background-color: rgb(244, 250, 244);
-    color: rgb(25, 43, 5);
+    all: unset;
+    background-color: rgb(34, 85, 23);
     position: absolute;
-    right: 30px;
+    right: 20px;
     top: 90px;
     display: flex;
     flex-direction: column;
     width: 60%;
     max-width: 200px;
-    border: 2px solid rgb(25, 43, 5);
+    border: 2px solid rgb(34, 85, 23);
     border-radius: 5px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    z-index: 9999;
   }
   .header-root nav .nav-buttons-root-hide {
     display: none;
   }
+  .header-root nav .nav-button {
+    all: unset;
+    padding: 10px 20px;
+    text-align: left;
+    width: 100%;
+    margin: 0px;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  .header-root nav .nav-button:hover {
+    all: unset;
+    padding: 10px 20px;
+    background-color: rgb(34, 85, 23);
+    color: rgb(255, 255, 255);
+  }
 }
 
 footer {
-  background-color: rgb(25, 43, 5);
-  color: rgb(246, 248, 249);
+  background-color: rgb(34, 85, 23);
+  color: rgb(255, 255, 255);
   padding: 30px 10px 40px 10px;
   text-align: center;
   display: flex;
@@ -87,24 +119,38 @@ footer .social-media a {
   cursor: default;
 }
 footer .social-media a i {
-  color: rgb(246, 248, 249);
-  font-size: 30px;
+  color: rgb(255, 255, 255);
+  font-size: 40px;
   padding: 10px;
   margin: 10px;
   cursor: pointer;
 }
 footer .footer-contact a {
   all: unset;
-  border: 1px solid white;
-  padding: 10px;
-  color: rgb(246, 248, 249);
+  display: inline-block;
+  border: 2px solid white;
+  padding: 15px 30px;
+  color: rgb(255, 255, 255);
   text-decoration: none;
-  border-radius: 15px;
+  border-radius: 25px;
+  background: #327d22;
+  font-size: 1.2em;
+  font-weight: bold;
   cursor: pointer;
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
+}
+footer .footer-contact a:hover {
+  background-color: #42a52d;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 footer .footer-contact a i {
-  color: rgb(246, 248, 249);
-  font-size: 15px;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  margin-left: 10px;
+  transition: color 0.3s;
+}
+footer .footer-contact a i:hover {
+  color: white;
 }
 @media screen and (min-width: 1080px) {
   footer footer .social-media {
@@ -116,7 +162,7 @@ footer .footer-contact a i {
 
 body {
   margin: 0;
-  background-color: rgb(252, 253, 251);
+  background-color: rgb(240, 253, 240);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -126,17 +172,37 @@ body {
 main {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  animation: fadeIn 1s ease-in-out;
+  padding: 10px;
 }
 main .blog-heading {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  padding: 40px;
+  align-items: start;
+  padding: 40px 40px 40px 0px;
   font-size: 2rem;
-  color: rgb(25, 43, 5);
-  font-weight: bold;
+  color: rgb(34, 85, 23);
+  animation: fadeIn 1s ease-in-out;
+}
+main .blog-heading .blog-summary {
+  font-size: 1rem;
+  color: rgb(51, 51, 51);
+  margin-top: 10px;
+  max-width: 900px;
+}
+main .divider {
+  max-width: 550px;
+  width: 100%;
+  border-bottom: 3px solid rgb(34, 85, 23);
+  margin-bottom: 40px;
 }
 main section {
-  padding: 0px 10vw 80px 10vw;
+  padding: 0px 0px 80px 0px;
+  max-width: 550px;
+  width: 100%;
+  animation: fadeInUp 1s ease-in-out;
 }
 main section figure .image-container {
   padding: 10px 0px 10px 0px;
@@ -149,8 +215,13 @@ main section figure .image-container img {
 }
 main section figure .image-container img:hover {
   transform: scale(1.02);
-  box-shadow: 0 0 5px 5px pink;
+  box-shadow: 0 0 5px 5px rgb(144, 238, 144);
   cursor: pointer;
+}
+main section figure h2 {
+  text-align: left;
+  color: rgb(34, 85, 23);
+  margin-bottom: 10px;
 }
 main section figure time {
   padding: 10px 0 10px 0;
@@ -158,23 +229,68 @@ main section figure time {
   color: gray;
 }
 main section .content {
-  color: black;
-  border-bottom: 3px solid gray;
+  color: rgb(51, 51, 51);
   max-width: 900px;
   width: 100%;
   text-align: justify;
 }
+main section .content h3 {
+  margin-top: 20px;
+  color: rgb(34, 85, 23);
+  font-weight: bold;
+}
+main section .content p {
+  margin-bottom: 20px;
+  line-height: 1.6;
+}
+main section .content strong {
+  color: rgb(34, 85, 23);
+}
 main section nav {
   padding: 30px 0px 0px 0px;
+  display: flex;
+  justify-content: center;
 }
 main section nav a {
   all: unset;
-  background-color: rgb(25, 43, 5);
+  background-color: rgb(34, 85, 23);
   color: white;
-  padding: 10px 20px 10px 20px;
+  padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+  text-align: center;
+  font-weight: bold;
 }
 main section nav a:hover {
-  color: pink;
+  background-color: rgb(144, 238, 144);
+  color: rgb(34, 85, 23);
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeInUp {
+  from {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.profile-message img {
+  animation: zoomIn 1s ease-in-out;
+}
+
+.profile-message label {
+  font-size: 1.5em;
+  color: rgb(34, 85, 23);
+  animation: fadeInLeft 1s ease-in-out;
 }/*# sourceMappingURL=blog.css.map */
