--- a/styles/pages/blog.scss
+++ b/styles/pages/blog.scss
@@ -2,68 +2,146 @@
 @import "../defaults/colors";
 @import "../defaults/breakpoints";
 
-main{
+main {
     display: flex;
     flex-direction: column;
-    .blog-heading{
+    align-items: center;
+    animation: fadeIn 1s ease-in-out;
+    padding: 10px;
+
+    .blog-heading {
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        padding: 40px;
+        align-items: start;
+        padding: 40px 40px 40px 0px;
         font-size: 2rem;
         color: $primary-color;
-        font-weight:bold;
+        animation: fadeIn 1s ease-in-out;
+    
+        .blog-summary {
+            font-size: 1rem;
+            color: $text-color;
+            margin-top: 10px;
+            max-width: 900px;
+        }
+    }    
+
+    .divider {
+        max-width: 550px;
+        width: 100%;
+        border-bottom: 3px solid $primary-color;
+        margin-bottom: 40px;
     }
 
-    section{
-        padding: 0px 10vw 80px 10vw;
+    section {
+        padding: 0px 0px 80px 0px;
+        max-width: 550px;
+        width: 100%;
+        animation: fadeInUp 1s ease-in-out;
 
         // Graphical Component: Blog hero image with date and title
-        figure{
-            .image-container{
+        figure {
+            .image-container {
                 padding: 10px 0px 10px 0px;
-                img{
+                img {
                     max-width: 900px;
                     width: 100%;
                     border-radius: 10px;
-                    transition:.5s;
-                } 
-                img:hover{
+                    transition: 0.5s;
+                }
+                img:hover {
                     transform: scale(1.02);
-                    box-shadow: 0 0 5px 5px pink;
+                    box-shadow: 0 0 5px 5px $accent-color;
                     cursor: pointer;
                 }
             }
-            time{
+            h2 {
+                text-align: left;
+                color: $primary-color;
+                margin-bottom: 10px;
+            }
+            time {
                 padding: 10px 0 10px 0;
                 font-style: italic;
-                color:gray;
+                color: gray;
             }
         }
 
         // Text Component: Blog content
-        .content{
-            color: black;
-            border-bottom: 3px solid gray;
+        .content {
+            color: $text-color;
             max-width: 900px;
             width: 100%;
             text-align: justify;
+
+            h3 {
+                margin-top: 20px;
+                color: $primary-color;
+                font-weight: bold;
+            }
+
+            p {
+                margin-bottom: 20px;
+                line-height: 1.6;
+            }
+
+            strong {
+                color: $primary-color;
+            }
         }
 
         // Text Component: Blog navigation
-        nav{
+        nav {
             padding: 30px 0px 0px 0px;
+            display: flex;
+            justify-content: center;
 
-            a{
+            a {
                 all: unset;
                 background-color: $primary-color;
                 color: white;
-                padding: 10px 20px 10px 20px;
+                padding: 10px 20px;
                 border-radius: 5px;
                 cursor: pointer;
+                transition: background-color 0.3s, color 0.3s;
+                text-align: center;
+                font-weight: bold;
             }
-            a:hover{
-                 color: pink;
+            a:hover {
+                background-color: $accent-color;
+                color: $primary-color;
             }
         }
     }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeInUp {
+    from {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.profile-message img {
+    animation: zoomIn 1s ease-in-out;
+}
+
+.profile-message label {
+    font-size: 1.5em;
+    color: $primary-color;
+    animation: fadeInLeft 1s ease-in-out;
 }
