--- a/styles/pages/contact.scss
+++ b/styles/pages/contact.scss
@@ -2,19 +2,24 @@
 @import "../defaults/colors";
 @import "../defaults/breakpoints";
 
-//<!-- graphical component with semantic HTML used main element -->//
-main{
+main {
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    .contact-heading{
-        font-size: large;
-        padding:40px 0 40px 0;
+    .contact-heading {
+        text-align: center;
+        font-size: 2rem;
+        padding: 40px 0;
         margin: 0;
 
+        p {
+            font-size: 1.2rem;
+            color: $text-color;
+        }
+
         @media screen and (max-width: $large) {
-            padding:40px 0 0 0; 
+            padding: 40px 0 0;
         }
     }
 
@@ -27,155 +32,356 @@ main{
 
     .contact-me-container {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: start;
-        max-width: 1500px;
-        width: 90vw;
-        padding: 30px 0px 50px 0px;
-
+        max-width: 900px;
+        width: 100%;
+        padding: 30px 0 50px;
+        position: relative;
+    
         @media screen and (max-width: $large) {
             flex-direction: column;
             align-items: center;
+            padding: 20px;
+            width: 100%;
+        }
+    
+        .divider {
+            width: 1px;
+            height: 85%;
+            background-color: $primary-color;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+    
+            @media screen and (max-width: $large) {
+                display: none;
+            }
         }
 
-        // Graphical Component: Image with header
+        .contact-form-container {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            height: 480px;
+            animation: fadeIn 3s ease-in-out;
+
+            .contact-form {
+                max-width: 400px;
+                width: 100%;
+                padding: 20px 20px;
+                background-color: white;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+                border-radius: 10px;
+                display: flex;
+                justify-content: space-between;
+                flex-direction: column;
+
+                @media screen and (max-width: $large) {
+                    padding: 20px;
+                    width: 100%;
+                }
+
+                textarea {
+                    resize: none;
+                }
+
+                .form-input-container {
+                    padding: 10px 0;
+                    display: flex;
+                    flex-direction: column;
+
+                    label {
+                        font-size: 1rem;
+                        color: $text-color;
+                        margin-bottom: 5px;
+                    }
+
+                    input,
+                    textarea {
+                        padding: 10px;
+                        border: 1px solid $primary-color;
+                        border-radius: 5px;
+                        transition: border-color 0.3s;
+
+                        &:focus {
+                            border-color: $nav-button-color;
+                            outline: none;
+                        }
+                    }
+                }
+
+                .btn-div {
+                    display: flex;
+                    justify-content: flex-end;
+
+                    button {
+                        all: unset;
+                        background-color: $primary-color;
+                        color: white;
+                        padding: 10px 20px;
+                        border: 2px solid $primary-color;
+                        border-radius: 5px;
+                        cursor: pointer;
+
+                        &:hover {
+                            background-color: $accent-color;
+                            color: $primary-color;
+                            text-decoration: none;
+                            border: 2px solid $accent-color;
+                        }
+                    }
+                }
+            }
+        }
+
+        .contact-details-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 100%;
+            padding: 20px 0px 20px 40px;
+
+            @media screen and (max-width: $large) {
+                padding: 40px 0px 0px 0px;
+                align-items: center;
+            }
+
+            .contact-item {
+                display: flex;
+                flex-direction: column;
+                padding: 10px 0 6px;
+                width: 100%;
+
+                @media screen and (max-width: $large) {
+                    align-items: center;
+                }
+
+                .contact-title {
+                    display: flex;
+                }
+
+                i {
+                    font-size: 28px;
+                    padding-right: 10px;
+                }
+
+                a {
+                    color: $primary-color;
+
+                    i {
+                        font-size: 40px;
+                    }
+                }
+            }
+
+            .social-items {
+                padding: 0 0 10px;
+                width: 100%;
+                display: flex;
+
+                @media screen and (max-width: $large) {
+                    justify-content: center;
+                }
+
+                .contact-title {
+                    display: flex;
+                }
+
+                i {
+                    font-size: 25px;
+                    padding-right: 10px;
+                }
+
+                a {
+                    color: $primary-color;
+
+                    i {
+                        font-size: 40px;
+                    }
+                }
+            }
+
+            .download-tag {
+                display: flex;
+                padding: 30px 0 0;
+
+                a {
+                    text-decoration: none;
+                    border: 2px solid $primary-color;
+                    padding: 10px;
+                    background-color: $primary-color;
+                    color: white;
+                    border-radius: 5px;
+                }
+
+                a:hover {
+                    background-color: $accent-color;
+                    color: $primary-color;
+                    text-decoration: none;
+                    border: 2px solid $accent-color;
+                }
+            }
+        }
+    }
+
+    .image-container-wrapper {
+        background-color: $secondary-background;
+        width: 100%;
+        padding: 100px 0 40px 0;
+        display: flex;
+        justify-content: center;
+        z-index: 1;
+
         .image-container {
+            position: relative;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            animation: fadeIn 3s ease-in-out;
 
             img {
                 padding: 20px;
                 max-width: 400px;
                 width: 100%;
-                border-radius: 100%;
-            }
-        }
-
-
-        .contact-details-container{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-
-            @media screen and (max-width: $large) {
-                padding: 0 0 40px 0; 
-                align-items: center; 
+                border-radius: 50%;
+                position: relative;
+                z-index: 1;
+                transition: transform 0.3s ease, box-shadow 0.3s ease;
             }
 
-            // Text Component: Contact Item 
-            .contact-item{ 
-                display: flex;
-                flex-direction: column;  
-                padding: 20px 0 10px 0;
-                width: 100%;
-
-                @media screen and (max-width: $large) {
-                    align-items: center; 
-                }
-
-                .contact-title {
-                    display: flex;
-                }
-                i{
-                    font-size: 25px;
-                    padding-right: 10px;
-                }
-                a{
-                    color: $primary-color;
-                    i{
-                        font-size: 40px;
-                    }
-                }
+            img:hover {
+                transform: scale(1.05);
+                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+                transition: transform 0.3s ease, box-shadow 0.3s ease;
+                cursor: pointer;
             }
 
-            // Graphical Component: Social Media Links
-            .social-items{   
-                padding: 0px 0 10px 0;
-                width: 100%;
-
-                display: flex;
-
-                @media screen and (max-width: $large) {
-                    justify-content: center; 
-                }
-
-                .contact-title {
-                    display: flex;
-                }
-                i{
-                    font-size: 25px;
-                    padding-right: 10px;
-                }
-                a{
-                    color: $primary-color;
-                    i{
-                        font-size: 40px;
-                    }
-                }
+            .shape {
+                position: absolute;
+                border-radius: 50%;
+                background: linear-gradient(45deg, $primary-color, $nav-button-color);
+                opacity: 0.6;
+                z-index: -1;
+                animation: color-change 8s infinite;
             }
 
-            // Download CV
-            .download-tag{
-                display: flex;
-                padding: 30px 0px 0px 0px;
-                a{
-                    text-decoration: none;
-                    border: 1px solid black;
-                    padding: 10px;
-                    background-color: $primary-color;
-                    color: white;
-                    border-radius: 5px;
-                }
-                a:hover{
-                    color: pink; 
-                    text-decoration: none;
-                }
+            .shape-1 {
+                width: 220px;
+                height: 220px;
+                top: -10px;
+                left: -10px;
+                animation: move-1 12s ease-in-out infinite, color-change 8s infinite;
             }
-        }
-    };
 
-    // Text Component: Contact Form
-    .contact-form-container {
-        display: flex;
-        justify-content: center;
-        background-color: lightgrey;
-        width: 100%;
-        padding: 20px;
-        
+            .shape-2 {
+                width: 240px;
+                height: 240px;
+                top: -20px;
+                left: -20px;
+                background: linear-gradient(45deg, $nav-button-color, $primary-color);
+                opacity: 0.4;
+                animation: move-2 15s ease-in-out infinite, color-change 8s infinite;
+            }
 
-        .contact-form{
-            max-width: 400px;
-            width: 100%;
-            padding: 30px;
-            display: column;
-            align-items:flex-end;
-
-            @media screen and (max-width: $large) {
-                padding: 30px 0px 30px 0px;
-                width: 100%;
-            }
-        
-            textarea{
-                resize: none;
-            }
-            .form-input-container{
-                padding: 10px 0 10px 0;
-                display: flex;
-                flex-direction: column;
-            }
-            .btn-div{
-                button{
-                    all:unset;
-                    background-color: $primary-color;
-                    color: white;
-                    padding: 10px;
-                    border:2px solid black;
-                    border-radius: 5px;
-                    cursor: pointer;
-                }
+            .shape-3 {
+                width: 180px;
+                height: 180px;
+                top: 50px;
+                left: 50px;
+                background: linear-gradient(45deg, $primary-color, $nav-button-color);
+                opacity: 0.5;
+                animation: move-3 18s ease-in-out infinite, color-change 8s infinite;
             }
         }
     }
+
+    @keyframes move-1 {
+        0%, 100% {
+            transform: translate(0, 0) rotate(0deg);
+        }
+        20% {
+            transform: translate(40px, -30px) rotate(60deg);
+        }
+        40% {
+            transform: translate(-30px, 50px) rotate(120deg);
+        }
+        60% {
+            transform: translate(30px, 40px) rotate(180deg);
+        }
+        80% {
+            transform: translate(-40px, -50px) rotate(240deg);
+        }
+    }
+
+    @keyframes move-2 {
+        0%, 100% {
+            transform: translate(0, 0) rotate(0deg);
+        }
+        20% {
+            transform: translate(-50px, 30px) rotate(-45deg);
+        }
+        40% {
+            transform: translate(40px, -60px) rotate(-90deg);
+        }
+        60% {
+            transform: translate(-30px, 40px) rotate(-135deg);
+        }
+        80% {
+            transform: translate(50px, -30px) rotate(-180deg);
+        }
+    }
+
+    @keyframes move-3 {
+        0%, 100% {
+            transform: translate(0, 0) rotate(0deg);
+        }
+        20% {
+            transform: translate(60px, 20px) rotate(30deg);
+        }
+        40% {
+            transform: translate(-40px, -60px) rotate(60deg);
+        }
+        60% {
+            transform: translate(50px, 30px) rotate(90deg);
+        }
+        80% {
+            transform: translate(-60px, -40px) rotate(120deg);
+        }
+    }
+
+    @keyframes color-change {
+        0% {
+            filter: hue-rotate(0deg);
+        }
+        100% {
+            filter: hue-rotate(360deg);
+        }
+    }
+
+    @keyframes fadeInUp {
+        0% {
+            opacity: 0;
+            transform: translateY(20px);
+        }
+        100% {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+    
+    .contact-heading {
+        animation: fadeInUp 1s ease-in-out;
+    }
+    
+    .contact-me-container {
+        animation: fadeInUp 1.5s ease-in-out;
+    }
+    
+    .image-container-wrapper {
+        animation: fadeInUp 2s ease-in-out;
+    }    
 }
+
+
